# Workspace

./: .gitignore  CMakeLists.txt  README.md  set_git_aliases.ps1  set_git_aliases.sh
uni-fmi/ai/8puzzle/: .gitignore  Makefile  main.cpp  solution.cpp  solution.h  test.cpp
uni-fmi/ais/: cheatsheat.txt  main.cpp
uni-fmi/ais/exploits/reverse-shell-32bit/: Makefile  Vagrantfile  expl.py  tcp-server.c
uni-fmi/web/: referat.html
uni-fmi/web/css/: styles.css
